# web_deployment

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/plugins/: trunk
rest_actuator/: Cargo.toml
rest_actuator/help/: geminy_sugestion_to_address the problem_axum_handlers_shared_state.mk  geminy_sugestion_to_address the problem_axum_handlers_shared_state_cached_functions.mk  geminy_sugestion_to_address the problem_axum_handlers_shared_state_cached_functions_without_explanation.txt  geminy_sugestion_to_address the problem_axum_handlers_shared_state_without_explanation.txt
rest_actuator/src/: lib.rs  lib.rs.bk  lib.rs.bk2
rest_service/: Cargo.toml
rest_service/src/: main.rs
rest_service_lib/: Cargo.toml  Secrets.toml
rest_service_lib/src/: lib.rs  oauth.rs
