[package]
name = "rest_actuator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde_json = "1.0"
env_logger = "0.11.3"
log = "0.4"
tokio-async-std = "1.5.3"