[package]
name = "rest_actuator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
log = "0.4"

[dev-dependencies]
hyper-util = { version = "0.1.0", features = [
  "http1",
  "client-legacy",
  "tokio",
] }
tokio = { version = "1.0", features = ["io-std", "macros", "io-util"] }
mime = "0.3"
tower = { version = "0.4", features = ["util", "timeout"] }
http-body-util = "0.1.0"

[lib]
name = "rest_actuator"
path = "src/lib.rs"
