[package]
name = "rest_service_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rest_actuator = { path = "../rest_actuator" }
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace"] }
tracing = "0.1"
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-gen = { version = "4.2.0", features = ["axum_extras", "uuid"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde_json = "1.0"
log = "0.4"
http-body-util = "0.1.0"

[dev-dependencies]
hyper-util = { version = "0.1.0", features = [
  "http1",
  "client-legacy",
  "tokio",
] }
tokio = { version = "1.0", features = ["io-std", "macros", "io-util"] }
mime = "0.3"
